# ft_ls

./: 1_main.c  2_f_ls_chec_argv.c  3_0_f_get_files_from_argv.c  3_1_f_count_file_in_argv_.c  4_0_f_print_.c  4_1_1_f_error_order_.c  4_1_2_0_f_print_only_ls.c  4_1_2_1_f_flag_L_.c  4_1_3_f_get_arg_in_print.c  CMakeLists.txt  Makefile  examp  f_bzero.c  f_check_argv.c  f_chmod_.c  f_count_files_.c  f_count_files_in_print.c  f_dup_arr_for_r_b_.c  f_error_order_.c  f_fill_error_.c  f_flag_L_.c  f_flag_a_.c  f_flag_l_.c  f_free_.c  f_get_arg_in_print.c  f_get_files_from_argv.c  f_get_info.c  f_get_length_param_.c  f_get_tty_.c  f_init_get_file_struct.c  f_initialize_flags.c  f_initialize_struct.c  f_lib_func_.c  f_link_uid_gid_t_.c  f_ls_chec_argv.c  f_ls_join_free.c  f_ls_str_length.c  f_ls_strcmp.c  f_ls_strdup.c  f_memdel.c  (+17 more)
nmizin_printf/: Makefile  f_check_letter_conversation.c  f_handelling_for_d_and_i_flags.c  f_handl_o_o.c  f_handl_s_big.c  f_handl_x_x.c  f_no_perc_at_all.c  f_perc_c_big.c  f_perc_c_small.c  f_perc_d_small.c  f_perc_o_o.c  f_perc_p_small.c  f_perc_s_big.c  f_perc_x_x.c  f_percent_s_small.c  f_pf_itoa.c  f_pf_itoa_base.c  f_pf_strlen.c  f_reset_init.c  f_sign.c  f_specifies_the_size_of_the_argument.c  f_wright_exact_length.c  ft_printf.c  ft_printf.h
